# DataGenie

./: .gitignore  cleaning_recommendations.json  cleaning_recommendations.txt  cleaning_recommendations_titanic.json  experiment.ipynb  main.py  pyproject.toml
agents/: data_cleaning_agent.py  data_understanding_agent.py  eda_agent.py
model/: llm.py
prompts/: data_cleaning_recomendations.py  data_understanding.py  eda_insight_prompt.py
