[project]
name = "data-science-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
]
